--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -15,16 +15,23 @@
         font-weight: var(--fontweight-bold);
         font-size: 3rem;
         text-shadow: 0 0 1.3px black;
-        margin-right: 2.5rem;
+        margin-right: 2rem;
     }
+    #account-login .text-xoxo {
+        color: var(--middlepink);
+        font-weight: inherit;
+        font-size: inherit;
+        text-shadow: 0 0 1.3px var(--middlepink);
 
+    }
 
     #account-login .img-logo{
         width: 3rem;
         height: 3rem;
-        margin-right: 1.3rem;
+        margin-right: 1rem;
         flex-shrink: 0;
         object-fit: cover;
+        transform: rotate(17deg);
     }
 
     #account-login .spacing-title{
