--- a/homescreenapp/templates/homescreenapp/homescreen.html
+++ b/homescreenapp/templates/homescreenapp/homescreen.html
@@ -13,6 +13,7 @@
     {% include 'homescreenapp/homescreensnippets/save.html' %}
     {% include 'homescreenapp/homescreensnippets/review.html' %}
     {% include 'homescreenapp/homescreensnippets/summary.html' %}
+    {% include 'homescreenapp/homescreensnippets/warning.html' %}
 </main>
 {% include 'homescreenapp/homescreensnippets/footer.html' %}
 {% endblock %}
