--- a/static/css/variable.css
+++ b/static/css/variable.css
@@ -12,10 +12,11 @@
     --whitegray:#f3f2f2;
     --whitepink:#fefbfc;
     --blackgray:#5c5c5c;
-    --red:#e96563;
-    --green:#7fc797;
+    --red:#e46967;
+    --green:#7ec897;
     --yellow:#fbce46;
-    --orange:#F29B30;
+    --orange:#edad5e;
+    --blue:#7988d2;
 
 
     --fontsize-small:1.4rem;
