--- a/templates/head.html
+++ b/templates/head.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="From.XoXo">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/static/images/logo.png">
     {% if intro_page %}
+    <meta property="og:image" content="/static/images/letter.png">
     <meta property="og:description" content="새로운 편지가 도착했어요!">
     {% else %}
+    <meta property="og:image" content="/static/images/logo.png">
     <meta property="og:description" content="나만의 재밌는 편지를 선물해요">
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
