--- a/letterapp/templates/letterapp/detailsnippets/content.html
+++ b/letterapp/templates/letterapp/detailsnippets/content.html
@@ -35,6 +35,7 @@
         height: 14rem;
         margin-bottom: 2rem;
         position: relative;
+        flex-shrink: 0;
     }
     #letter-detail-content  .image-click {
         width: 2.5rem;
@@ -52,6 +53,7 @@
         border:1.5px solid #e3e3e3;
         box-shadow:0 3px 13px #e3e3e3;
         object-fit: cover;
+        flex-shrink: 0;
     }
     @media screen and (min-width: 800px) {
         #letter-detail-content .item-image{
