--- a/templates/headersnippets/logo.html
+++ b/templates/headersnippets/logo.html
@@ -7,8 +7,8 @@
     flex-direction: row;
 }
 .img-logo{
-    width: 2.4rem;
-    height: 2.4rem;
+    width: 2rem;
+    height: 2rem;
     flex-shrink: 0;
     object-fit: cover;
     margin-right: 0.7rem;
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    font-size: 1.9rem;
+    font-size: 2rem;
     color:inherit;
     font-weight: var(--fontweight-index);
     margin-left: 0.5rem;
@@ -29,11 +29,11 @@
     color:var(--middlepink);
     font-weight: inherit;
     margin-left: 0.2rem;
-    text-shadow: 0 1px 1px var(--middlepink);
+    text-shadow: 0 0 1px var(--middlepink);
 }
 
 </style>
 <a class="btn-logo" href="{% url 'homescreenapp:homescreen'%}">
-<span class="text-logo">
-    <img class="img-logo" src='/static/icons/etc/logo.png'>
+<span class="text-logo tema-{{ target_letter.letter_content.tema }}" style="background: none">
+    From.<span class="text-logo-bold">XoXo</span></span>
 </a>
